--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ docxtpl==0.9.2
 Jinja2==2.11.2
 lxml==4.5.1
 MarkupSafe==1.1.1
-pipenv==2018.11.26
+pipenv>=2022.1.8
 python-docx==0.8.10
 six==1.14.0
 virtualenv==16.7.7
